--- a/sld3.html
+++ b/sld3.html
@@ -1,3 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>HT Board Professional SLD</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body{font-family:Arial;margin:0;background:#f2f6ff}
+
+/* HEADER */
+.header-bar{
+  position:sticky;top:0;z-index:1000;
+  background:#003f88;color:#fff;
+  display:flex;align-items:center;gap:10px;
+  padding:12px;
+}
+.header-bar button{
+  background:#fff;color:#003f88;border:none;
+  border-radius:6px;padding:8px 12px;
+  font-size:16px;cursor:pointer;
+}
+.header-title{flex:1;text-align:center;font-size:22px;font-weight:700}
+
+.container{padding:12px}
+.card{
+  background:#fff;border-radius:10px;
+  box-shadow:0 2px 6px rgba(0,0,0,.15);
+  padding:12px;
+}
+
+#wrap{
+  overflow:auto;border:1px solid #ccc;
+  background:#fff;height:70vh;
+}
+#sldCanvas{width:100%;height:100%}
+
+/* GRAPHICS */
+.bus{stroke:#000;stroke-width:4}
+.power-line{
+  stroke:#00cc44;stroke-width:4;
+  stroke-dasharray:10 6;
+  animation:flow 1s linear infinite;
+}
+@keyframes flow{from{stroke-dashoffset:0}to{stroke-dashoffset:-32}}
+
+.label{font-size:16px;font-weight:600;text-anchor:middle}
+.cbtext{font-size:15px;font-weight:bold;text-anchor:middle}
+.board-title{
+  font-size:24px;font-weight:900;
+  fill:#003f88;text-anchor:middle;
+}
+.info{font-weight:bold;color:#003f88;margin-bottom:8px}
+
+@media(max-width:768px){
+  .label{font-size:17px}
+  .cbtext{font-size:16px}
+}
+</style>
+</head>
+
+<body>
+
+<div class="header-bar">
+  <button onclick="goHome()">🏠 Home</button>
+  <button onclick="goBack()">⬅ Back</button>
+  <div class="header-title" id="title">HT BOARD SLD</div>
+</div>
+
+<div class="container">
+  <div class="card">
+    <div class="info" id="boardInfo">Loading...</div>
+    <div id="wrap">
+      <svg id="sldCanvas" viewBox="0 0 1400 620"></svg>
+    </div>
+  </div>
+</div>
+
 <script>
 // ================= CONFIG =================
 const JSON_URL =
@@ -32,23 +110,23 @@ function text(x,y,str,anchor="middle",cls="label"){
   svg.appendChild(t);
 }
 
-// ⭐⭐⭐ SAFE WRAP (NO WHITE SCREEN) ⭐⭐⭐
-function wrappedText(x,y,str,maxCharsPerLine=14){
-  const words=String(str).split(" ");
+// ⭐ SAFE WRAP (NO WHITE SCREEN EVER)
+function wrappedText(x,y,str,maxChars=14){
+  str=String(str||"");
+  const words=str.split(" ");
   const lineHeight=18;
 
-  let lines=[];
-  let current="";
+  let lines=[],current="";
 
   words.forEach(w=>{
-    if((current+w).length>maxCharsPerLine){
+    if((current+w).length>maxChars){
       lines.push(current.trim());
       current=w+" ";
     }else{
       current+=w+" ";
     }
   });
-  lines.push(current.trim());
+  if(current.trim()) lines.push(current.trim());
 
   const textEl=document.createElementNS("http://www.w3.org/2000/svg","text");
   textEl.setAttribute("x",x);
@@ -69,12 +147,7 @@ function wrappedText(x,y,str,maxCharsPerLine=14){
 
 // ---------- board title ----------
 function drawBoardTitle(name){
-  const t=document.createElementNS("http://www.w3.org/2000/svg","text");
-  t.setAttribute("x",700);
-  t.setAttribute("y",40);
-  t.setAttribute("class","board-title");
-  t.textContent=name;
-  svg.appendChild(t);
+  text(700,40,name,"middle","board-title");
 }
 
 // ---------- transformer ----------
@@ -115,9 +188,9 @@ function breaker(x,y,label,side=null,isCoupler=false){
   if(isCoupler){
     text(x,y-24,label);
   }else if(side==="left"){
-    text(x-140,y+5,label,"end");
+    text(x-150,y+5,label,"end");
   }else if(side==="right"){
-    text(x+140,y+5,label,"start");
+    text(x+150,y+5,label,"start");
   }
 }
 
@@ -146,9 +219,9 @@ async function loadSLD(){
 
     boardInfo.innerText=`Incomers: ${board.topology.totalIncomers}`;
     draw(board,boardId);
-  }catch(err){
-    console.error(err);
-    boardInfo.innerText="❌ Drawing error — check console";
+  }catch(e){
+    console.error(e);
+    boardInfo.innerText="❌ Drawing error";
   }
 }
 
@@ -175,8 +248,8 @@ function draw(board,boardId){
   // INCOMERS
   const incomers=[
     ...board.incomers,
-    ...board.dgIncomers,
-    ...board.emergencyIncomers
+    ...(board.dgIncomers||[]),
+    ...(board.emergencyIncomers||[])
   ];
 
   const spacing=W/(incomers.length+1);
@@ -189,9 +262,9 @@ function draw(board,boardId){
     breaker(x,BUS_Y-40,inc.breakerId,side,false);
   });
 
-  // POSITION-BASED OUTGOINGS
+  // POSITION BASED OUTGOINGS
   let maxPos=0;
-  [...board.incomers,...board.outgoings,...(board.busCouplers||[])]
+  [...(board.incomers||[]),...(board.outgoings||[]),...(board.busCouplers||[])]
     .forEach(r=>{ if(r.position>maxPos) maxPos=r.position; });
 
   const leftMargin=120;
@@ -199,19 +272,23 @@ function draw(board,boardId){
   const usableWidth=rightMargin-leftMargin;
 
   function posToX(pos){
+    if(!maxPos) return mid;
     return leftMargin+(usableWidth*(pos-1)/(maxPos-1));
   }
 
-  board.outgoings.forEach(o=>{
+  (board.outgoings||[]).forEach(o=>{
     const x=posToX(o.position);
 
     line(x,BUS_Y+6,x,BUS_Y+46,"bus");
     breaker(x,BUS_Y+66,null);
     arrowDown(x,BUS_Y+82);
 
-    wrappedText(x,BUS_Y+165,o.breakerId,16);
+    wrappedText(x,BUS_Y+170,o.breakerId,16);
   });
 }
 
 loadSLD();
 </script>
+
+</body>
+</html>
